Fix word wrap for photo title on gallery

--- a/src/styles/gallery.css
+++ b/src/styles/gallery.css
@@ -14,6 +14,11 @@
     align-items: center;
 }
 
+.main-photo-info{
+    word-wrap: break-word;
+    width: 500px;
+}
+
 button{
     height: 50px;
     width: 100px;
